[tool.poetry]
name = "bcol-api"
version = "0.1.0"
description = ""
authors = ["BC Registries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sbc-common-components = {git = "https://github.com/bcgov/sbc-common-components.git", subdirectory = "python"}
flask-jwt-oidc = {git = "https://github.com/thorwolpert/flask-jwt-oidc.git"}
gunicorn = "^21.2.0"
flask = "^3.0.2"
flask-script = "^2.0.6"
flask-moment = "^1.0.5"
flask-restx = "^1.3.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
jsonschema = "4.17.3"
requests = "^2.31.0"
zeep = "^4.2.1"
python-ldap = "^3.4.4"
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}
attrs = "^23.2.0"
werkzeug = "^3.0.1"
jaeger-client = "^4.8.0"
pycountry = "^23.12.11"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
requests = "^2.31.0"
pyhamcrest = "^2.1.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.13.3"
autopep8 = "^2.0.4"
coverage = "^7.4.3"
pylint = "^3.1.0"
pylint-flask = "^0.6"
pydocstyle = "^6.3.0"
lovely-pytest-docker = "^0.3.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
