[tool.poetry]
name = "pay-api"
version = "0.1.0"
description = ""
authors = ["BC Registries and Online Services"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-caching = "2.3.0"
flask-cors = "4.0.0"
flask-migrate = "4.0.7"
flask-moment = "1.0.5"
flask-sqlalchemy = "3.1.1"
flask-script = "2.0.6"
flask = "3.0.2"
jinja2 = "3.1.3"
mako = "1.3.2"
markupsafe = "2.1.5"
sqlalchemy-utils = "0.41.1"
sqlalchemy = "2.0.28"
werkzeug = "3.0.1"
alembic = "1.13.1"
attrs = "23.2.0"
blinker = "1.7.0"
cachelib = "0.9.0"
cachetools = "5.3.3"
cattrs = "23.2.3"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
croniter = "2.0.2"
cryptography = "42.0.5"
dpath = "2.1.6"
ecdsa = "0.18.0"
expiringdict = "1.2.2"
flask-jwt-oidc = {git = "https://github.com/seeker25/flask-jwt-oidc.git"}
flask-marshmallow = "1.2.0"
gcp-queue = { git = "https://github.com/seeker25/sbc-connect-common.git", subdirectory = "python/gcp-queue", branch = "add_ordering" }
greenlet = "3.0.3"
gunicorn = "21.2.0"
holidays = "0.37"
idna = "3.6"
itsdangerous = "2.1.2"
jaeger-client = "4.8.0"
jsonschema = "4.17.3"
launchdarkly-eventsource = "1.1.1"
launchdarkly-server-sdk = "8.2.1"
marshmallow-sqlalchemy = "1.0.0"
marshmallow = "3.21.1"
opentracing = "2.4.0"
packaging = "24.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
psycopg2-binary = "2.9.9"
pyrfc3339 = "1.1"
pyasn1-modules = "0.3.0"
pyasn1 = "0.5.1"
pycparser = "2.21"
pyhumps = "3.8.0"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
pytz = "2024.1"
requests = "2.32.2"
rsa = "4.9"
semver = "3.0.2"
sentry-sdk = "1.41.0"
six = "1.16.0"
threadloop = "1.0.2"
thrift = "0.16.0"
tornado = "6.4"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
sbc-common-components = {git = "https://github.com/bcgov/sbc-common-components.git", subdirectory = "python"}
pg8000 = "^1.30.5"
sql-versioning = { git = "https://github.com/bcgov/lear.git", subdirectory = "python/common/sql-versioning", branch = "feature-legal-name" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
requests = "^2.32.2"
pyhamcrest = "^2.1.0"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"
flake8 = "^7.0.0"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.13.3"
autopep8 = "^2.0.4"
coverage = "^7.4.3"
pylint = "^3.1.0"
pylint-flask = "^0.6"
pydocstyle = "^6.3.0"
isort = "^5.13.2"
lovely-pytest-docker = "^0.3.1"
faker = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
