[tool.poetry]
name = "pay-api"
version = "0.1.0"
description = ""
authors = ["BC Registries and Online Services"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-caching = { git = "https://github.com/pallets-eco/flask-caching.git", branch = "master" }
flask-cors = "6.0.0"
flask-migrate = "4.0.7"
flask-moment = "1.0.5"
flask-sqlalchemy = "3.1.1"
flask-script = "2.0.6"
flask = "3.0.2"
jinja2 = "3.1.6"
mako = "1.3.2"
markupsafe = "2.1.5"
sqlalchemy-utils = "0.41.1"
sqlalchemy = "2.0.28"
werkzeug = "^3.1.4"
alembic = "1.13.1"
attrs = "23.2.0"
blinker = "1.7.0"
cachetools = "5.3.3"
cattrs = "23.2.3"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
croniter = "2.0.2"
cryptography = "44.0.1"
dpath = "2.1.6"
expiringdict = "1.2.2"
flask-marshmallow = "1.2.0"
gcp-queue = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/gcp-queue", branch = "main" }
greenlet = "3.0.3"
gunicorn = "23.0.0"
holidays = "0.37"
idna = "3.7"
itsdangerous = "2.1.2"
jaeger-client = "4.8.0"
jsonschema = "4.17.3"
launchdarkly-eventsource = "1.1.1"
launchdarkly-server-sdk = "8.2.1"
marshmallow-sqlalchemy = "1.0.0"
marshmallow = "3.21.1"
opentracing = "2.4.0"
packaging = "24.0"
proto-plus = "1.23.0"
protobuf = "4.25.8"
psycopg2-binary = "2.9.9"
pyrfc3339 = "1.1"
pyasn1-modules = "0.3.0"
pyasn1 = "0.5.1"
pycparser = "2.21"
pyhumps = "3.8.0"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
requests = "2.32.4"
rsa = "4.9"
semver = "3.0.2"
six = "1.16.0"
threadloop = "1.0.2"
thrift = "0.16.0"
tornado = "^6.5.1"
typing-extensions = "4.10.0"
urllib3 = "2.5.0"
sbc-common-components = {git = "https://github.com/bcgov/sbc-common-components.git", subdirectory = "python"}
pg8000 = "^1.31.5"
sql-versioning = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/sql-versioning", branch = "main" }
aiohttp = "^3.12.14"
setuptools = "^78.1.1"
flask-executor = "^1.0.0"
cachelib = "^0.13.0"
flask-jwt-oidc = {git = "https://github.com/seeker25/flask-jwt-oidc.git", branch="main"}
structured-logging = {git = "https://github.com/bcgov/sbc-connect-common.git", rev = "main", subdirectory = "python/structured-logging"}
google-cloud-storage = "^2.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.0"
requests = "^2.32.4"
pyhamcrest = "^2.1.0"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"
ruff = "^0.8.0"
coverage = "^7.4.3"
lovely-pytest-docker = "^0.3.1"
faker = "^24.2.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "devops",
    ".history",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = [
    "E4",      # pycodestyle errors
    "E7",      # pycodestyle errors  
    "E9",      # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # unused-function-argument
    "D",       # pydocstyle
    "I",       # isort
    "N",       # pep8-naming
    "Q",       # flake8-quotes
    "S",       # flake8-bandit
    "T",       # flake8-type-checking
    "TCH",     # flake8-type-checking
    "TID",     # flake8-tidy-imports
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = ["PLR2004", "S101", "TID252", "ARG001", "B006", "B008", "S311", "T201"]
# Allow magic values in tests
"**/test_*.py" = ["PLR2004", "S101", "TID252", "ARG001", "B006", "B008", "S311", "T201"]
# Allow magic values in conftest.py
"conftest.py" = ["PLR2004", "S101", "TID252", "ARG001", "B006", "B008", "S311", "T201"]
# Allow magic values in migrations
"migrations/**/*.py" = ["PLR2004", "S101", "TID252"]
# Allow magic values in devops
"devops/**/*.py" = ["PLR2004", "S101", "TID252"]
# Allow unused imports in __init__.py
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["pay_api"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "2.0"
testpaths = [
   "tests",
]
addopts = "--verbose --strict -p no:warnings --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml"
python_files = [
   "test*.py"
]
norecursedirs = [
   ".git", ".tox", "venv*", "requirements*", "build",
]
log_cli = true
log_cli_level = "1"
filterwarnings = [
   "ignore::UserWarning",
   "ignore::pytest.PytestUnhandledThreadExceptionWarning"
]
markers = [
   "slow",
   "serial"
]

[tool.coverage.run]
branch = true
source = [
   "src/auth_api",
]
omit = [
    "wsgi.py",
    "gunicorn_config.py"
]

[tool.coverage.report]
exclude_lines = [
   "pragma: no cover",
   "from",
   "import",
   "def __repr__",
   "if self.debug:",
   "if settings.DEBUG",
   "raise AssertionError",
   "raise NotImplementedError",
   "if 0:",
   'if __name__ == "__main__":',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
